clusters/cluster0/kubernetes/apps/jitsi/jitsi/app/jitsi-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jitsi
  namespace: jitsi
spec:
  hostnames:
  - jitsi.biggs.dog
  parentRefs:
  - name: wildcard-biggs-dog
    namespace: networking
  rules:
  - backendRefs:
    - name: jitsi-jitsi-meet-web
      port: 8000
    matches:
    - path:
        type: PathPrefix
        value: /
