clusters/cluster0/kubernetes/apps/jitsi/jitsi/app/jitsi-coturn-media-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jitsi-coturn-media-policy
  namespace: jitsi
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: coturn
  egress:
    # 1. STUN/TURN Ports to Internet
    - toEntities:
        - internet
      toPorts:
        - ports:
            - port: "3478"
              protocol: UDP
            - port: "3478"
              protocol: TCP
            - port: "5349"
              protocol: TCP
            - port: "50000-54999"
              protocol: UDP
    # 2. Relay to JVB LoadBalancer (Internal LAN IP)
    - toIPs:
        - 192.168.2.9/32
      toPorts:
        - ports:
            - port: "10000"
              protocol: UDP
