clusters/cluster0/kubernetes/apps/jitsi/jitsi/app/jitsi-jvb-media-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jitsi-jvb-media-policy
  namespace: jitsi
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: jvb
  egress:
    # 1. Media Traffic to Internet (UDP 10000)
    - toEntities:
        - internet
      toPorts:
        - ports:
            - port: "10000"
              protocol: UDP
